# logomaker

./: .gitignore  .readthedocs.yaml  BaseLogo.py  BasicLogo.py  Glyph.py  LICENSE  Logo.py  MANIFEST.in  Matrix.py  NajafabadiEtAl2017.ipynb  Pipfile  README.md  README.rst  __init__.py  anylogo.py  barak.ipynb  character.py  character_transformation.ipynb  color.py  crp.txt  crp_counts_mat.txt  crp_freq_mat.txt  data.py  documentation_parser.py  figure_1.ipynb  flask_app.py  grid.py  heatmap.py  human_splice_sites.xlsx  load_meme.py  logomaker  logomaker.py  logomakerissues1.ipynb  make_logo.py  make_logo_arguments.txt  make_styled_logo.py  meme_parser.ipynb  old_comments.txt  old_stuff.py  parameters.txt  (+19 more)
.ipynb_checkpoints/: character_transformation-checkpoint.ipynb  figure_1-checkpoint.ipynb  logomakerissues1-checkpoint.ipynb  sortseq_test-checkpoint.ipynb  splicesite_logo-checkpoint.ipynb  test_anylogo-checkpoint.ipynb  test_logo_types-checkpoint.ipynb  test_logomaker-checkpoint.ipynb  wwdomain_test-checkpoint.ipynb
data/: PVIVIT_BackRub_ForJustin.csv  ZNF64_meme_motif.txt  crp_site_sequences.txt  dreme.txt  full-500-formatted.txt  nn_saliency_matrix.txt  nn_saliency_values.txt  pUA66.dna  rnap_tau_final_all.41.matrix.txt  ss_sequences.txt  ww_aligned_sequences.txt  ww_domains.txt
deployment/: MANIFEST.in  setup.py
docs/: CRP_energy_logo.ipynb  Glyph.rst  Logo.rst  Logomaker_Tutorial_Advanced.ipynb  Logomaker_Tutorial_Glyphs.ipynb  Logomaker_Tutorial_Simple.ipynb  Makefile  WW_information_logo.ipynb  conf.py  examples.ipynb  examples.rst  examples_src.rst  (+8 more)
(+194 files in other folders)
