[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logomaker"
version = "0.8.6"
description = "Package for making Sequence Logos"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Ammar Tareen and Justin B. Kinney", email = "tareen@cshl.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas"
]

[project.urls]
Documentation = "http://logomaker.readthedocs.io"
Repository = "https://github.com/jbkinney/logomaker"

[tool.hatch.build]
include = [
    "logomaker/src/*",
    "logomaker/data/*", 
    "logomaker/jupyter_notebooks/*",
    "logomaker/tests/*",
    "logomaker/examples/*"
]

[tool.hatch.build.targets.wheel]
packages = ["logomaker"]

[tool.hatch.build.targets.sdist]
packages = ["logomaker"]
include = [
    "/logomaker",
    "LICENSE",
    "README.md"
]